tests/baselines/reference/asiPreventsParsingAsAmbientExternalModule02.errors.txt
tests/cases/conformance/externalModules/asiPreventsParsingAsAmbientExternalModule02.ts(8,5): error TS2435: Ambient modules cannot be nested in other modules.


==== tests/cases/conformance/externalModules/asiPreventsParsingAsAmbientExternalModule02.ts (1 errors) ====
    
    var declare: number;
    var module: string;
    
    module container {
        declare                // this is the identifier 'declare'
        module                 // this is the identifier 'module'
        "my external module"   // this is just a string
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2435: Ambient modules cannot be nested in other modules.
        { }                    // this is a block body
    }